Blender 2.8 crashes when converting to Curve from Mesh #55718

Closed
opened 2018-07-03 14:21:17 +02:00 by Niek Kort · 15 comments

System info:
system-info.txt

Hi, when converting the Mesh in the attached blend file to a Curve, Blender crashes.

Crash example.blend

Again tried with this version and got same result:
version: 2.80 (sub 20), branch: blender2.8, commit date: 2018-07-10 23:21, hash: 17bc056, type: Release

System info: [system-info.txt](https://archive.blender.org/developer/F3855124/system-info.txt) Hi, when converting the Mesh in the attached blend file to a Curve, Blender crashes. [Crash example.blend](https://archive.blender.org/developer/F3855158/Crash_example.blend) Again tried with this version and got same result: version: 2.80 (sub 20), branch: blender2.8, commit date: 2018-07-10 23:21, hash: 17bc056, type: Release
Author

Added subscriber: @NiekKort

Added subscriber: @NiekKort

#56128 was marked as duplicate of this issue

#56128 was marked as duplicate of this issue

#56044 was marked as duplicate of this issue

#56044 was marked as duplicate of this issue

#56046 was marked as duplicate of this issue

#56046 was marked as duplicate of this issue

#55932 was marked as duplicate of this issue

#55932 was marked as duplicate of this issue

#55743 was marked as duplicate of this issue

#55743 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29

Crash confirmed with current 2.8, for some reason we get a CURVE object with NULL obdata… not ime to dig further currently.

Crash confirmed with current 2.8, for some reason we get a CURVE object with NULL obdata… not ime to dig further currently.

Added subscribers: @poly_wire, @YAFU

Added subscribers: @poly_wire, @YAFU

Added subscriber: @wissam

Added subscriber: @wissam

Added subscribers: @Aslan3D.com, @FrancoisGosselin, @s12a

Added subscribers: @Aslan3D.com, @FrancoisGosselin, @s12a

Added subscriber: @hjsrabi

Added subscriber: @hjsrabi

This issue was referenced by 475e9003c0

This issue was referenced by 475e9003c06869df8182e7135fe9459d7309696c
Bastien Montagne self-assigned this 2018-07-31 15:32:56 +02:00

Found the issue, stupid mistake in COW magic handling of runtime Object caches...

Found the issue, stupid mistake in COW magic handling of runtime Object caches...

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55718
No description provided.