Fix T55718: Blender 2.8 crashes when converting to Curve from Mesh.

We only want to care about runtime.mesh_orig if… data is indeed a Mesh! ;)